FIX | Size of hero section on mobile

--- a/components/HeroSection/style.module.scss
+++ b/components/HeroSection/style.module.scss
@@ -1,18 +1,20 @@
 @import "styles/utils";
 
 .heroSection {
-  min-height: 540px;
+  min-height: 100vh;
+  max-height: 540px;
   text-align: center;
   padding: 57px 0 0;
 
   @include media(">tablet") {
-    height: 910px;
+    min-height: 910px;
+    max-height: initial;
     text-align: left;
     padding: 152px 0 0;
   }
 
   @include media(">desktop") {
-    height: 730px;
+    min-height: 730px;
     padding: 95px 0 0;
   }
 
